--- a/microsoft-azure-az-900-fundamentals.html
+++ b/microsoft-azure-az-900-fundamentals.html
@@ -436,68 +436,78 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 @media amzn-kf8{#header,#content,#footnotes,#footer{padding:0}}
 </style>
 </head>
-<body class="article data-line-1">
+<body class="book toc2 toc-left data-line-1">
 <div id="header">
 <h1>Microsoft Azure AZ-900 Fundamentals</h1>
+<div id="toc" class="toc2">
+<div id="toctitle">Table of Contents</div>
+<ul class="sectlevel1">
+<li><a href="#_describe_cloud_computing">Describe cloud computing</a>
+<ul class="sectlevel2">
+<li><a href="#_describe_the_shared_responsibility_model">Describe the shared responsibility model</a></li>
+</ul>
+</li>
+</ul>
+</div>
 </div>
 <div id="content">
 <div class="sect1 data-line-3">
 <h2 id="_describe_cloud_computing">Describe cloud computing</h2>
 <div class="sectionbody">
-<div class="sect2 data-line-5">
+<div class="sect2 data-line-4">
 <h3 id="_describe_the_shared_responsibility_model">Describe the shared responsibility model</h3>
-<div class="imageblock data-line-7">
+<div class="imageblock data-line-6">
 <div class="content">
-<img src="../images/01-shared-responsibility-b3829bfe.svg" alt="01 shared responsibility b3829bfe">
+<img src="/Users/matteo/Documents/backup/matteo/personal/learning/cloud/microsoft/microsoft-azure-AZ-900-fundamentals/images/01-shared-responsibility-b3829bfe.svg" alt="01 shared responsibility b3829bfe">
 </div>
 </div>
-<div class="paragraph data-line-9">
+<div class="paragraph data-line-8">
 <p>You’ll always be responsible for:</p>
 </div>
-<div class="ulist data-line-11">
+<div class="ulist data-line-10">
 <ul>
-<li class="data-line-11">
+<li class="data-line-10">
 <p>The information and data stored in the cloud</p>
 </li>
-<li class="data-line-12">
+<li class="data-line-11">
 <p>Devices that are allowed to connect to your cloud (cell phones, computers, and so on)</p>
 </li>
-<li class="data-line-13">
+<li class="data-line-12">
 <p>The accounts and identities of the people, services, and devices within your organization</p>
 </li>
 </ul>
 </div>
-<div class="paragraph data-line-15">
+<div class="paragraph data-line-14">
 <p>The cloud provider is always responsible for:</p>
 </div>
-<div class="ulist data-line-17">
+<div class="ulist data-line-16">
 <ul>
-<li class="data-line-17">
+<li class="data-line-16">
 <p>The physical datacenter</p>
 </li>
-<li class="data-line-18">
+<li class="data-line-17">
 <p>The physical network</p>
 </li>
-<li class="data-line-19">
+<li class="data-line-18">
 <p>The physical hosts</p>
 </li>
 </ul>
 </div>
-<div class="paragraph data-line-21">
+<div class="paragraph data-line-20">
 <p>Your service model will determine responsibility for things like:</p>
 </div>
-<div class="ulist data-line-23">
+<div class="ulist data-line-22">
 <ul>
-<li class="data-line-23">
+<li class="data-line-22">
 <p>Operating systems</p>
 </li>
-<li class="data-line-24">
+<li class="data-line-23">
 <p>Network controls</p>
 </li>
-<li class="data-line-25">
+<li class="data-line-24">
 <p>Applications</p>
 </li>
-<li class="data-line-26">
+<li class="data-line-25">
 <p>Identity and infrastructure</p>
 </li>
 </ul>
@@ -508,7 +518,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-01-21 15:00:20 +0100
+Last updated 2023-01-21 22:03:09 +0100
 </div>
 </div>
 </body>
